Address review comments on the CobolControl tests and docs
- performThroughStopsAtTheEndOfContList claimed to cover the
  "control ends before end" path but exited via executedProgramId == end,
  duplicating another test. Replace it with two tests that break the
  chain before end, covering the nextCont != null guard in both the
  do-while and the section fall-through loop.
- Use Arrays.asList instead of List.of: the module targets Java 8 and no
  other source in libcobj uses Java 9+ APIs.
- Fix a pre-existing typo in the contList example: the A-02 entry was
  built with l_SUB__A_01.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>